{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 25,
  "lineage": "6267c084-154e-97da-8196-2137eccc1bea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09afa3cd5e9d31141",
            "arn": "arn:aws:ec2:us-east-1:016812367951:elastic-ip/eipalloc-09afa3cd5e9d31141",
            "domain": "vpc",
            "id": "eipalloc-09afa3cd5e9d31141",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-214-191-70.compute-1.amazonaws.com",
            "public_ip": "3.214.191.70",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-oneclick-eip"
            },
            "tags_all": {
              "Name": "k8s-oneclick-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016812367951:internet-gateway/igw-02649810ae460da95",
            "id": "igw-02649810ae460da95",
            "owner_id": "016812367951",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-oneclick-igw"
            },
            "tags_all": {
              "Name": "k8s-oneclick-igw"
            },
            "vpc_id": "vpc-05269e8894715e72b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09afa3cd5e9d31141",
            "association_id": "eipassoc-08b1c79e5b58aa571",
            "connectivity_type": "public",
            "id": "nat-06eb8acda832905cb",
            "network_interface_id": "eni-042788ef7d842e0a2",
            "private_ip": "10.0.1.228",
            "public_ip": "3.214.191.70",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01508d3867d429421",
            "tags": {
              "Name": "k8s-oneclick-natgw"
            },
            "tags_all": {
              "Name": "k8s-oneclick-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026c85eef6af6fd3e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06eb8acda832905cb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-026c85eef6af6fd3e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "016812367951",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-026c85eef6af6fd3e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02649810ae460da95",
            "id": "r-rtb-0277f0dac1216d08d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0277f0dac1216d08d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "016812367951",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0277f0dac1216d08d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016812367951:route-table/rtb-026c85eef6af6fd3e",
            "id": "rtb-026c85eef6af6fd3e",
            "owner_id": "016812367951",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "k8s-oneclick-private-rt"
            },
            "tags_all": {
              "Name": "k8s-oneclick-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05269e8894715e72b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "016812367951",
            "id": "rtb-026c85eef6af6fd3e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016812367951:route-table/rtb-0277f0dac1216d08d",
            "id": "rtb-0277f0dac1216d08d",
            "owner_id": "016812367951",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "k8s-oneclick-public-rt"
            },
            "tags_all": {
              "Name": "k8s-oneclick-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05269e8894715e72b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "016812367951",
            "id": "rtb-0277f0dac1216d08d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ba187a36cc374f8",
            "region": "us-east-1",
            "route_table_id": "rtb-026c85eef6af6fd3e",
            "subnet_id": "subnet-0e0ddfa69f58ef184"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014e3ab32f2aaac5b",
            "region": "us-east-1",
            "route_table_id": "rtb-026c85eef6af6fd3e",
            "subnet_id": "subnet-09a523a4c3ee6c925"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019a9959fc9432073",
            "region": "us-east-1",
            "route_table_id": "rtb-0277f0dac1216d08d",
            "subnet_id": "subnet-01508d3867d429421"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072fc2dce74ed2c79",
            "region": "us-east-1",
            "route_table_id": "rtb-0277f0dac1216d08d",
            "subnet_id": "subnet-052e99242460df7da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016812367951:subnet/subnet-0e0ddfa69f58ef184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0ddfa69f58ef184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "016812367951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-oneclick-priv-1"
            },
            "tags_all": {
              "Name": "k8s-oneclick-priv-1"
            },
            "vpc_id": "vpc-05269e8894715e72b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "016812367951",
            "id": "subnet-0e0ddfa69f58ef184",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016812367951:subnet/subnet-09a523a4c3ee6c925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a523a4c3ee6c925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "016812367951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-oneclick-priv-2"
            },
            "tags_all": {
              "Name": "k8s-oneclick-priv-2"
            },
            "vpc_id": "vpc-05269e8894715e72b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "016812367951",
            "id": "subnet-09a523a4c3ee6c925",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016812367951:subnet/subnet-01508d3867d429421",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01508d3867d429421",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "016812367951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-oneclick-pub-1"
            },
            "tags_all": {
              "Name": "k8s-oneclick-pub-1"
            },
            "vpc_id": "vpc-05269e8894715e72b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "016812367951",
            "id": "subnet-01508d3867d429421",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016812367951:subnet/subnet-052e99242460df7da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052e99242460df7da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "016812367951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-oneclick-pub-2"
            },
            "tags_all": {
              "Name": "k8s-oneclick-pub-2"
            },
            "vpc_id": "vpc-05269e8894715e72b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "016812367951",
            "id": "subnet-052e99242460df7da",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:016812367951:vpc/vpc-05269e8894715e72b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ebece73135954c83",
            "default_route_table_id": "rtb-059f115b937f5e690",
            "default_security_group_id": "sg-0c95e2024016715ce",
            "dhcp_options_id": "dopt-0061274cb24b2f393",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05269e8894715e72b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059f115b937f5e690",
            "owner_id": "016812367951",
            "region": "us-east-1",
            "tags": {
              "Name": "k8s-oneclick-vpc"
            },
            "tags_all": {
              "Name": "k8s-oneclick-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}